--- a/templates/base.html
+++ b/templates/base.html
@@ -22,5 +22,7 @@
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<script src="{{ STATIC_URL }}/js/main.js"></script>
 	{% endblock %}
+	
+	Hey everyone!
 </body>
 </html>
